--- a/style.css
+++ b/style.css
@@ -1,13 +1,56 @@
 * {
-    font-family: sans-serif;
-    /* margin: 0;
-    padding: 0; */
+    font-family: "Comic Sans MS", "Comic Sans", sans-serif;
+    margin: 0;
+    padding: 0;
     text-align: center;
 }
 
-/* h1 {
-    marg
-} */
+main {
+    height: 100vh;
+    width: 100vw;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+main > section {
+    min-height: 80vh;
+    min-width: 80vw;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 2rem;
+}
+
+p, div, button, input {
+    font-size: 1rem;
+}
+
+h1, p, div {
+    margin: 0.5rem;
+}
+
+#joke-div {
+    flex-grow: 1;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#joke-btn {
+    background-color: white;
+    border-radius: 10px;
+    border-style: none;
+}
 
 #joke-div {
     background-color: lightblue;
@@ -16,4 +59,11 @@
 
 .hidden {
     display: none;
+}
+
+@media (height > 600px) {
+    main > section {
+        min-height: 50vh;
+        min-width: 50vw;
+    }
 }
